--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <!-- bs的CSS樣式表 -->
     <link rel="stylesheet" href="./css/bootstrap-4.0.0.css">
     <!-- bs的icon -->
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"> -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+    <!-- https://icons.getbootstrap.com/#install -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- fontawesome的icon -->
     <link rel="stylesheet" href="./fontawesome-free-5.7.2-web/css/all.css">
     <!-- 自己撰寫的CSS -->
